src/scope/snapshots/rnix_analyzer__scope__tests__scope_attr_set-2.snap
---
source: src/scope/mod.rs
expression: scope_tree
---
InverseScopeTree {
    leaf_scopes: [
        ScopePath(
            [
                Scope {
                    kind: AttrSet,
                    defines: {
                        "a": Definition {
                            id: 18,
                            name: "a",
                            text_range: [20; 21),
                        },
                        "b": Definition {
                            id: 19,
                            name: "b",
                            text_range: [39; 40),
                        },
                        "c": Definition {
                            id: 20,
                            name: "c",
                            text_range: [58; 59),
                        },
                        "d": Definition {
                            id: 21,
                            name: "d",
                            text_range: [85; 86),
                        },
                        "e": Definition {
                            id: 22,
                            name: "e",
                            text_range: [112; 113),
                        },
                    },
                    text_range: [6; 124),
                },
                Scope {
                    kind: Lambda,
                    defines: {
                        "d": Definition {
                            id: 17,
                            name: "d",
                            text_range: [3; 4),
                        },
                    },
                    text_range: [3; 124),
                },
                Scope {
                    kind: Lambda,
                    defines: {
                        "a": Definition {
                            id: 16,
                            name: "a",
                            text_range: [0; 1),
                        },
                    },
                    text_range: [0; 124),
                },
                Scope {
                    kind: Root,
                    defines: {
                        "abort": Definition {
                            id: 4,
                            name: "abort",
                            text_range: [0; 0),
                        },
                        "baseNameOf": Definition {
                            id: 5,
                            name: "baseNameOf",
                            text_range: [0; 0),
                        },
                        "builtins": Definition {
                            id: 6,
                            name: "builtins",
                            text_range: [0; 0),
                        },
                        "derivation": Definition {
                            id: 7,
                            name: "derivation",
                            text_range: [0; 0),
                        },
                        "dirOf": Definition {
                            id: 8,
                            name: "dirOf",
                            text_range: [0; 0),
                        },
                        "false": Definition {
                            id: 1,
                            name: "false",
                            text_range: [0; 0),
                        },
                        "fetchTarball": Definition {
                            id: 9,
                            name: "fetchTarball",
                            text_range: [0; 0),
                        },
                        "import": Definition {
                            id: 10,
                            name: "import",
                            text_range: [0; 0),
                        },
                        "isNull": Definition {
                            id: 11,
                            name: "isNull",
                            text_range: [0; 0),
                        },
                        "map": Definition {
                            id: 12,
                            name: "map",
                            text_range: [0; 0),
                        },
                        "null": Definition {
                            id: 2,
                            name: "null",
                            text_range: [0; 0),
                        },
                        "placeholder": Definition {
                            id: 13,
                            name: "placeholder",
                            text_range: [0; 0),
                        },
                        "removeAttrs": Definition {
                            id: 14,
                            name: "removeAttrs",
                            text_range: [0; 0),
                        },
                        "throw": Definition {
                            id: 3,
                            name: "throw",
                            text_range: [0; 0),
                        },
                        "toString": Definition {
                            id: 15,
                            name: "toString",
                            text_range: [0; 0),
                        },
                        "true": Definition {
                            id: 0,
                            name: "true",
                            text_range: [0; 0),
                        },
                    },
                    text_range: [0; 124),
                },
            ],
        ),
        ScopePath(
            [
                Scope {
                    kind: Lambda,
                    defines: {
                        "d": Definition {
                            id: 17,
                            name: "d",
                            text_range: [3; 4),
                        },
                    },
                    text_range: [3; 124),
                },
                Scope {
                    kind: Lambda,
                    defines: {
                        "a": Definition {
                            id: 16,
                            name: "a",
                            text_range: [0; 1),
                        },
                    },
                    text_range: [0; 124),
                },
                Scope {
                    kind: Root,
                    defines: {
                        "abort": Definition {
                            id: 4,
                            name: "abort",
                            text_range: [0; 0),
                        },
                        "baseNameOf": Definition {
                            id: 5,
                            name: "baseNameOf",
                            text_range: [0; 0),
                        },
                        "builtins": Definition {
                            id: 6,
                            name: "builtins",
                            text_range: [0; 0),
                        },
                        "derivation": Definition {
                            id: 7,
                            name: "derivation",
                            text_range: [0; 0),
                        },
                        "dirOf": Definition {
                            id: 8,
                            name: "dirOf",
                            text_range: [0; 0),
                        },
                        "false": Definition {
                            id: 1,
                            name: "false",
                            text_range: [0; 0),
                        },
                        "fetchTarball": Definition {
                            id: 9,
                            name: "fetchTarball",
                            text_range: [0; 0),
                        },
                        "import": Definition {
                            id: 10,
                            name: "import",
                            text_range: [0; 0),
                        },
                        "isNull": Definition {
                            id: 11,
                            name: "isNull",
                            text_range: [0; 0),
                        },
                        "map": Definition {
                            id: 12,
                            name: "map",
                            text_range: [0; 0),
                        },
                        "null": Definition {
                            id: 2,
                            name: "null",
                            text_range: [0; 0),
                        },
                        "placeholder": Definition {
                            id: 13,
                            name: "placeholder",
                            text_range: [0; 0),
                        },
                        "removeAttrs": Definition {
                            id: 14,
                            name: "removeAttrs",
                            text_range: [0; 0),
                        },
                        "throw": Definition {
                            id: 3,
                            name: "throw",
                            text_range: [0; 0),
                        },
                        "toString": Definition {
                            id: 15,
                            name: "toString",
                            text_range: [0; 0),
                        },
                        "true": Definition {
                            id: 0,
                            name: "true",
                            text_range: [0; 0),
                        },
                    },
                    text_range: [0; 124),
                },
            ],
        ),
        ScopePath(
            [
                Scope {
                    kind: Lambda,
                    defines: {
                        "a": Definition {
                            id: 16,
                            name: "a",
                            text_range: [0; 1),
                        },
                    },
                    text_range: [0; 124),
                },
                Scope {
                    kind: Root,
                    defines: {
                        "abort": Definition {
                            id: 4,
                            name: "abort",
                            text_range: [0; 0),
                        },
                        "baseNameOf": Definition {
                            id: 5,
                            name: "baseNameOf",
                            text_range: [0; 0),
                        },
                        "builtins": Definition {
                            id: 6,
                            name: "builtins",
                            text_range: [0; 0),
                        },
                        "derivation": Definition {
                            id: 7,
                            name: "derivation",
                            text_range: [0; 0),
                        },
                        "dirOf": Definition {
                            id: 8,
                            name: "dirOf",
                            text_range: [0; 0),
                        },
                        "false": Definition {
                            id: 1,
                            name: "false",
                            text_range: [0; 0),
                        },
                        "fetchTarball": Definition {
                            id: 9,
                            name: "fetchTarball",
                            text_range: [0; 0),
                        },
                        "import": Definition {
                            id: 10,
                            name: "import",
                            text_range: [0; 0),
                        },
                        "isNull": Definition {
                            id: 11,
                            name: "isNull",
                            text_range: [0; 0),
                        },
                        "map": Definition {
                            id: 12,
                            name: "map",
                            text_range: [0; 0),
                        },
                        "null": Definition {
                            id: 2,
                            name: "null",
                            text_range: [0; 0),
                        },
                        "placeholder": Definition {
                            id: 13,
                            name: "placeholder",
                            text_range: [0; 0),
                        },
                        "removeAttrs": Definition {
                            id: 14,
                            name: "removeAttrs",
                            text_range: [0; 0),
                        },
                        "throw": Definition {
                            id: 3,
                            name: "throw",
                            text_range: [0; 0),
                        },
                        "toString": Definition {
                            id: 15,
                            name: "toString",
                            text_range: [0; 0),
                        },
                        "true": Definition {
                            id: 0,
                            name: "true",
                            text_range: [0; 0),
                        },
                    },
                    text_range: [0; 124),
                },
            ],
        ),
        ScopePath(
            [
                Scope {
                    kind: Root,
                    defines: {
                        "abort": Definition {
                            id: 4,
                            name: "abort",
                            text_range: [0; 0),
                        },
                        "baseNameOf": Definition {
                            id: 5,
                            name: "baseNameOf",
                            text_range: [0; 0),
                        },
                        "builtins": Definition {
                            id: 6,
                            name: "builtins",
                            text_range: [0; 0),
                        },
                        "derivation": Definition {
                            id: 7,
                            name: "derivation",
                            text_range: [0; 0),
                        },
                        "dirOf": Definition {
                            id: 8,
                            name: "dirOf",
                            text_range: [0; 0),
                        },
                        "false": Definition {
                            id: 1,
                            name: "false",
                            text_range: [0; 0),
                        },
                        "fetchTarball": Definition {
                            id: 9,
                            name: "fetchTarball",
                            text_range: [0; 0),
                        },
                        "import": Definition {
                            id: 10,
                            name: "import",
                            text_range: [0; 0),
                        },
                        "isNull": Definition {
                            id: 11,
                            name: "isNull",
                            text_range: [0; 0),
                        },
                        "map": Definition {
                            id: 12,
                            name: "map",
                            text_range: [0; 0),
                        },
                        "null": Definition {
                            id: 2,
                            name: "null",
                            text_range: [0; 0),
                        },
                        "placeholder": Definition {
                            id: 13,
                            name: "placeholder",
                            text_range: [0; 0),
                        },
                        "removeAttrs": Definition {
                            id: 14,
                            name: "removeAttrs",
                            text_range: [0; 0),
                        },
                        "throw": Definition {
                            id: 3,
                            name: "throw",
                            text_range: [0; 0),
                        },
                        "toString": Definition {
                            id: 15,
                            name: "toString",
                            text_range: [0; 0),
                        },
                        "true": Definition {
                            id: 0,
                            name: "true",
                            text_range: [0; 0),
                        },
                    },
                    text_range: [0; 124),
                },
                Scope {
                    kind: Lambda,
                    defines: {
                        "a": Definition {
                            id: 16,
                            name: "a",
                            text_range: [0; 1),
                        },
                    },
                    text_range: [0; 124),
                },
            ],
        ),
    ],
}
